# ATIBeckhoff

./: README.md
.github/workflows/: ros2_ci.yaml
BeckhoffPLCcode/LoadCellProject/: LoadCellProject.sln
BeckhoffPLCcode/LoadCellProject/LoadCellProject/: LoadCellProject.tsproj.bak
BeckhoffPLCcode/LoadCellProject/LoadCellProject/LoadCellReader/: LoadCellReader.plcproj  LoadCellReader.tmc  PlcTask.TcTTO
BeckhoffPLCcode/LoadCellProject/LoadCellProject/LoadCellReader/GVLs/: GVL_Receive.TcGVL  GVL_Transmit.TcGVL
BeckhoffPLCcode/LoadCellProject/LoadCellProject/LoadCellReader/POUs/: MAIN.TcPOU
BeckhoffPLCcode/LoadCellProject/LoadCellProject/LoadCellReader/POUs/FunctionBlocks/: EvaluateAllOffsets.TcPOU
BeckhoffPLCcode/LoadCellProject/LoadCellProject/LoadCellReader/POUs/Functions/: EvaluateOffset.TcPOU  ScaleVoltage.TcPOU
BeckhoffPLCcode/LoadCellProject/LoadCellProject/LoadCellReader/_CompileInfo/: 1B243481-55F7-C5E0-7670-95B1BE8B3E4F.compileinfo  5A4CF905-17FC-1184-D334-4B3422D99E19.compileinfo
BeckhoffPLCcode/LoadCellProject/LoadCellProject/_Boot/TwinCAT OS (ARMT2)/: CurrentConfig.tszip  CurrentConfig.xml
BeckhoffPLCcode/LoadCellProject/LoadCellProject/_Boot/TwinCAT OS (ARMT2)/CurrentConfig/: LoadCellReader.tpzip
BeckhoffPLCcode/LoadCellProject/LoadCellProject/_Boot/TwinCAT RT (x64)/: CurrentConfig.tszip  CurrentConfig.xml
PythonReceiveADS/: HandleLoadCell.py
calibrationFile/: FT54334.cal
loadcell/: CMakeLists.txt  Readme.md  package.xml
loadcell/scripts/: PublishWrench.py
(+10 files in other folders)
