<?xml version="1.0"?>
<package format="3">
  <name>loadcell</name>
  <version>0.0.1</version>
  <description>The loadcell package that publishes loadcell data over ROS2 network.</description>
  <maintainer email="A.G.Metcalf@leeds.ac.uk">Adam Metcalf</maintainer>

  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>pyads</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
